# NCAABasketballStatsScraper

./: .gitignore  CONSTS.py  Parser.py  README.md  Service.py  Table.py  debugger.py  init.sql  initDatabase.py  pyproject.toml  runScraper.py
InitDB/: initDB.py  initDBQUERIES.py
StatHead/: QUERIES.py  databaseHelper.py  parser.py  service.py  sessionHelper.py  statheadDBHelper.py  statheadParser.py  statheadQUERIES.py  statheadService.py
StatHead/models/: GameMatchupData.py  GameResult.py  RegSeasonGame.py  RunLog.py  TournamentGame.py
StatHead/tests/: conftest.py  test_parser.py
StatHead/tests/models/: endOfOffsetPage.html  matchup_game1.html  matchup_game2.html  matchup_game3.html
TeamStat/: QUERIES.py  Service.py  Table.py  initDatabase.py  teamstatDBHelper.py  teamstatQUERIES.py  teamstatService.py  test.py
ncaabasketballstatsscraper/: CONSTS.py  Parser.py  QUERIES.py  Service.py  Table.py  initDatabase.py  test.py
stat_head/: QUERIES.py  databaseHelper.py  parser.py  sessionHelper.py
stat_head/models/: RunLog.py
team_stat/: Table.py  statsURLs.txt  test.py  test.sql
tests/: conftest.py  test_parser.py  test_temp.py
tests/models/: mock_html.html
